# magnetar

./: .gitignore  LICENSE  README.md  ROADMAP.md  TODO.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tailwind.config.ts  vite.config.ts
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml
.github/workflows/: nextjs.yml
docs/: index.html
plugins/: README.md
plugins/helpful_commands/: bluetooth.ps1  commands.json
src/: App.tsx  context.ts  context.tsx  index.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: desktop.json
src-tauri/icons/: icon.icns
src-tauri/resources/commands/: bluetooth.ps1  cleanup.ps1  commands.json
src-tauri/src/: audio.rs  commands.rs  dir.rs  executable.rs  filesystem.rs  lib.rs  main.rs  pe.rs  shell.rs  steam.rs  window.rs
src-tauri/src/app/: tray.rs  window.rs
src-tauri/src/commands/: execute.rs  fetch.rs  mod.rs
src-tauri/src/config/: theme.rs
src-tauri/src/module/: cmd.rs  commands.rs  mod.rs  steam.rs
src-tauri/src/module/steam/: app.rs  mod.rs
src-tauri/src/modules/apps/: pe.rs
src-tauri/src/modules/commands/: shell.rs
src-tauri/src/modules/folders/: explorer.rs
src-tauri/src/modules/games/: steam.rs
src-tauri/src/steam/: app.rs  fetch.rs  locate.rs  mod.rs
src-tauri/src/util/: config.rs  dir.rs  mod.rs  string.rs  update.rs
src/components/: Expander.tsx  Header.tsx  Home.tsx  Item.tsx  NavigationBar.tsx  PageButton.tsx  PageDisplay.tsx
src/components/Apps/: AppItem.tsx  AppItemContext.tsx  Apps.tsx  NewAppMenu.tsx  index.tsx
src/components/Audio/: Audio.tsx
src/components/Checkbox/: index.tsx
src/components/Commands/: CommandItem.tsx  CommandItemContext.tsx  CommandList.tsx  Commands.tsx  index.tsx
src/components/Context/: index.tsx
src/components/Dropdown/: index.tsx
src/components/Expander/: index.tsx
src/components/Games/: Game.tsx  GameItem.tsx  GameItemContext.tsx  GameLauncher.tsx  GameLaunchers.tsx  GameList.tsx  Games.tsx  index.tsx
src/components/Header/: Header.tsx  HeaderButton.tsx  index.tsx
src/components/Home/: Home.tsx  HomeUpdatePanel.tsx  index.tsx
src/components/Item/: index.tsx
src/components/Modal/: index.tsx
src/components/Navigation/: NavigationBar.tsx  NavigationButton.tsx  NavigationSearch.tsx  PageButton.tsx  index.tsx
src/components/Settings/: Settings.tsx  SettingsItem.tsx  index.tsx
src/components/common/: Context.tsx  ContextButton.tsx  Expander.tsx  Item.tsx  Page.tsx
src/enums/: page.ts
src/hooks/: useMount.ts  useOnClickOutside.ts  useStickyState.ts
src/modules/: Module.tsx
src/store/: index.ts
src/types/: commands.ts  general.ts  index.ts
src/util/: index.ts
src/utils/: cmd.ts  cn.ts  command.ts  file.ts  index.ts  path.ts  storage.ts  string.ts  trim.ts
(+41 files in other folders)
