[package]
name = "magnetar"
version = "0.0.6"
description = "magnetar"
authors = ["Bamboooz"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["dialog-open", "fs-read-file", "fs-write-file", "fs-create-dir", "fs-exists", "shell-open", "system-tray", "window-hide", "global-shortcut-all", "window-close", "window-set-focus", "window-show"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-positioner = "1.0.5"
winreg = "0.52.0"
windows = { version = "0.58.0", features = ["Win32", "Win32_Graphics", "Win32_Graphics_Dwm"] }

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
opt-level = 3
debug = false
strip = true
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1
rpath = false
