[package]
name = "magnetar"
version = "0.0.8"
description = "magnetar"
authors = ["Bamboooz"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
winreg = "0.52.0"
windows = { version = "0.58.0", features = ["Win32", "Win32_Graphics", "Win32_Graphics_Dwm"] }
reqwest = { version = "0.12.7", features = ["json"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-global-shortcut = "2"

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
opt-level = 3
debug = false
strip = true
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1
rpath = false
